# lc-renderer

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker-image-develop.yml  docker-image-release.yml  inspection-beta.yml  inspection-nightly.yml  inspection-stable.yml  inspection.yml
proto/: README.md
proto/render/v0/: api_service.proto  chart.proto  color.proto  renderer_service.proto  scale.proto  view.proto  view_values.proto
scripts/: get_lc_proto.sh
src/: bar.rs  color.rs  error.rs  main.rs  margin.rs  point.rs  renderer.rs  scale.rs  size.rs  value.rs  view.rs
src/proto/: render.rs
