[package]
name = "lc-renderer"
version = "0.0.1"
edition = "2018"
authors = ["Andrei Ozerov <andrei.ozerov92@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Server to render chart images."
readme = "README.md"
documentation = "https://docs.rs/lc-renderer"
homepage = "https://github.com/limpidchart/lc-renderer"
repository = "https://github.com/limpidchart/lc-renderer.git"
categories = ["graphics"]
keywords = ["graphics"]

[dependencies]
chrono = "0.4"
lc-render = "0.2.3"
prost = "0.7"
prost-types = "0.7"
slog = "2.7"
slog-async = "2.5"
slog-json = "2.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.4"
tonic-health = "0.3.1"

[build-dependencies]
tonic-build = "0.4"